# chat-cli

./: README.md  pyproject.toml
chat_cli/: __main__.py  chat.py
chat_cli/tools/: request.py  search.py  shell.py
chat_cli/utils/: chat.py  manager.py  tool_loader.py
